--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <header class="bg-primary text-white">
       <div class="container text-center">
         <img src="" width="25%" style="border-radius: 50%"><!-- TODO --></img>
-        <h1> <!-- TODO add name --></h1>
+        <h1> <-- Efrain--></h1>
       </div>
     </header>
 
@@ -72,9 +72,9 @@
           <div class="col-lg-8 mx-auto">
             <h2>Favorite food</h2>
             <ol>
-              <li><!-- TODO Add food --></li>
-              <li><!-- TODO Add food --></li>
-              <!--- TODO Add list item with food -->
+              <li><-- Burrito --></li>
+              <li><-- Pizza--></li>
+              <--- chocolate-->
             </ol>
           </div>
         </div>
@@ -89,13 +89,13 @@
             <ul>
               <li>
                 <a href="https://www.imdb.com/title/tt0468569/">
-                  <!-- TODO add movie -->
+                  <- End Game->
                 </a>
               </li>
               <li>
-                <!-- TODO add movie with a link -->
+                <-- https://en.wikipedia.org/wiki/Avengers:_Endgame -->
               </li>
-              <!-- TODO Add one more list item -->
+            </li>
             </ul>
           </div>
         </div>
@@ -107,7 +107,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Favorite Meme</h2>
-            <img src=""><!--- TODO add link to the src attribute --></img>
+            <img src="https://static.vibe.com/files/2017/02/Roll-Safe-1485964928-compressed.jpg"></img>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Favorite YouTube Video</h2>
             <iframe width="560" height="315" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-              <!-- TODO add link to src attribute -->
+              <img src="https://youtu.be/q2cbCsy9gRk"></img>
             </iframe>
           </div>
         </div>
@@ -158,5 +158,3 @@
   </body>
 
 </html>
-
-
